Footer correct all pages

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -131,7 +131,7 @@
 
     <!-- rodapé (igual ao index.html) -->
     <footer class="site-footer" role="contentinfo" aria-label="Rodapé do site">
-      <div class="container footer-inner">
+      <div class="footer-container footer-inner">
         <p>
           &copy; <span id="currentYear"></span> Aurevo Finance. Todos os
           direitos reservados.
