--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </main>
 
     <footer class="site-footer" role="contentinfo" aria-label="Rodapé do site">
-      <div class="container footer-inner">
+      <div class="footer-container footer-inner">
         <p>
           &copy; <span id="currentYear"></span> Aurevo Finance. Todos os
           direitos reservados.
