JS year on footer correct

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <footer class="site-footer" role="contentinfo" aria-label="Rodapé do site">
       <div class="footer-container footer-inner">
         <p>
-          &copy; <span id="currentYear"></span> Aurevo Finance. Todos os
+          &copy; <span data-current-year></span> Aurevo Finance. Todos os
           direitos reservados.
         </p>
         <nav class="footer-nav">
