--- a/pages/login.html
+++ b/pages/login.html
@@ -77,5 +77,18 @@
         </form>
       </div>
     </main>
+    <footer class="site-footer" role="contentinfo" aria-label="Rodapé do site">
+      <div class="footer-container footer-inner">
+        <p>
+          &copy; <span data-current-year></span> Aurevo Finance. Todos os
+          direitos reservados.
+        </p>
+        <nav class="footer-nav">
+          <a href="#privacy">Política de Privacidade</a>
+          <a href="#contact">Contato</a>
+        </nav>
+      </div>
+    </footer>
+    <script src="../index.js"></script>
   </body>
 </html>
