--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -193,39 +193,8 @@
     </section>
 
     <section class="dashboard-layout" role="main" aria-label="Painel principal">
-      <aside class="panel left" aria-label="Painel esquerdo - navegação">
-        <div class="hud">
-          <div class="hud-top">
-            <img
-              src="../assets/avatar.svg"
-              alt="Foto do usuário"
-              class="avatar"
-            />
-            <div class="user-info">
-              <div class="welcome">
-                Bem-vindo, <span class="user-name">Usuário</span>!
-              </div>
-              <div class="logo-sm">Aurevo Finance</div>
-            </div>
-          </div>
-
-          <div class="bills-count" aria-live="polite">
-            <span><strong>0</strong> contas pendentes este mês</span>
-          </div>
-
-          <nav class="left-actions" aria-label="Ações rápidas">
-            <button class="btn" type="button">Registrar lembrete mensal</button>
-            <button class="btn" type="button">
-              Registrar lembrete trimestral
-            </button>
-            <button class="btn" type="button">Registrar lembrete anual</button>
-            <button class="btn" type="button">Registrar gastos do mês</button>
-            <button class="btn" type="button">Calendário</button>
-            <button class="btn" type="button">Análise gráfica</button>
-            <button class="btn" type="button">Desempenho financeiro</button>
-          </nav>
-        </div>
-      </aside>
+      <!-- Painel esquerdo removido: simplificamos o layout para focar
+           no conteúdo central e nas ações rápidas à direita. -->
 
       <main class="panel center" aria-label="Conteúdo central">
         <!--
@@ -337,6 +306,8 @@
                   <option value="expense">Saídas</option>
                 </select>
               </label>
+              <!-- Botão visível para abrir o modal de adicionar transação -->
+              <button id="addTxBtn" class="btn primary" type="button">Adicionar transação</button>
             </div>
           </header>
 
@@ -478,6 +449,50 @@
     </section>
 
     <!-- rodapé (igual ao index.html) -->
+    <!-- Modal: Adicionar Transação (marcado para ser usado pelo assets/dashboard.js) -->
+    <div id="txModal" class="modal" role="dialog" aria-hidden="true" aria-labelledby="txModalTitle">
+      <div class="modal-backdrop" aria-hidden="true"></div>
+      <div class="modal-dialog">
+        <header class="modal-head">
+          <h3 id="txModalTitle">Adicionar transação</h3>
+          <button class="modal-close" aria-label="Fechar">×</button>
+        </header>
+        <form id="txForm" class="modal-form">
+          <div class="form-row">
+            <label for="txDate">Data</label>
+            <input id="txDate" name="date" type="date" required />
+          </div>
+
+          <div class="form-row">
+            <label for="txDesc">Descrição</label>
+            <input id="txDesc" name="desc" type="text" placeholder="Ex: Salário, Mercado" required />
+          </div>
+
+          <div class="form-row">
+            <label for="txCategory">Categoria</label>
+            <input id="txCategory" name="category" type="text" placeholder="Ex: Renda, Alimentação" required />
+          </div>
+
+          <div class="form-row">
+            <label for="txType">Tipo</label>
+            <select id="txType" name="type" required>
+              <option value="income">Entrada</option>
+              <option value="expense">Saída</option>
+            </select>
+          </div>
+
+          <div class="form-row">
+            <label for="txValue">Valor (R$)</label>
+            <input id="txValue" name="value" type="number" step="0.01" min="0.01" placeholder="0.00" required />
+          </div>
+
+          <div class="modal-actions">
+            <button type="submit" class="btn primary">Salvar</button>
+            <button type="button" class="btn modal-close">Cancelar</button>
+          </div>
+        </form>
+      </div>
+    </div>
     <footer class="site-footer" role="contentinfo" aria-label="Rodapé do site">
       <div class="footer-container footer-inner">
         <p>
