Refatoração e reestrutração do projeto.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -15,8 +15,8 @@
       rel="stylesheet"
     />
 
-    <!-- CSS global -->
-    <link rel="stylesheet" href="assets/style.css" />
+    <!-- CSS global (v2.0 - Refatorado) -->
+    <link rel="stylesheet" href="css/main.css" />
   </head>
 
   <body>
@@ -185,6 +185,6 @@
         </nav>
       </div>
     </footer>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
