--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Cadastro — Aurevo Finance</title>
-    <link rel="stylesheet" href="../assets/style.css" />
+    <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body>
     <main class="container" style="max-width: 540px; margin: 3.5rem auto">
@@ -80,6 +80,6 @@
         </nav>
       </div>
     </footer>
-    <script src="../index.js"></script>
+    <script type="module" src="../index.js"></script>
   </body>
 </html>
