--- a/pages/login.html
+++ b/pages/login.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Login — Aurevo Finance</title>
-    <link rel="stylesheet" href="../assets/style.css" />
+    <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body>
     <main class="container" style="max-width: 480px; margin: 4rem auto">
@@ -89,6 +89,6 @@
         </nav>
       </div>
     </footer>
-    <script src="../index.js"></script>
+    <script type="module" src="../index.js"></script>
   </body>
 </html>
